Cleanup code, add player list providers from multiple APIs, probably some other stuff idk